--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-torch==2.1.0
-transformers==4.36.0
+--find-links https://download.pytorch.org/whl/cu121
+torch
+transformers
 datasets==2.15.0
 tqdm==4.66.1
+jupyter==1.0.0
+numpy==1.26.2
+pandas==2.1.3
+scikit-learn==1.3.2
+matplotlib==3.8.2
