--- a/requirements.cpu.txt
+++ b/requirements.cpu.txt
@@ -1,4 +1,4 @@
-torch==2.1.0+cu121 --index-url https://download.pytorch.org/whl/cu121
+torch==2.1.0+cpu
 transformers
 datasets==2.15.0
 tqdm==4.66.1
@@ -6,4 +6,4 @@ jupyter==1.0.0
 numpy==1.26.2
 pandas==2.1.3
 scikit-learn==1.3.2
-matplotlib==3.8.2
+matplotlib==3.8.2 
